@@ -1,3 +1,9 @@
+2007-1-1	fabian
+
+	* Fixed initial window size bug (#1623786).
+	* Fixed the bottom border, so it no longer overlaps with the resizing triangle.
+	* Added support for unlimited scrollback. Set scroll back lines to -1 or any number larger than 1,000,000.
+	
 2006-12-28	fabian
 
 	* Added an option to enable/disable the border at the bottom of windows.
